# project-p7-elevator-door

./: CMakeLists.txt  README.md  demo_script.txt  elevator_door_test.py  index.html  platformio.ini
docs/sections/: architecture.md  requirements.md  sdlc-traceability.md  uml-statecharts.md
include/: User_Setup.h  config.h  display_task.h  door_fsm.h  event_dispatcher.h  event_logger.h  fault_nvs.h  hal.h  safety_monitor.h  system.h  system_event.h
main/: CMakeLists.txt  app_main.c
main/dispatcher/: event_dispatcher.c
main/display/: display_task.c
main/fsm/: door_fsm.c
main/hal/: hal_uart_mock.c
main/logger/: event_logger.c
main/nvs/: fault_nvs.c
main/safety/: safety_monitor.c
src/: CMakeLists.txt  app_main.c  main.cpp
src/display/: display.cpp  display.h
src/fsm/: door_fsm.c  fsm.cpp  fsm.h
src/hal/: hal_uart_mock.c
src/logger/: event_logger.c  logger.cpp  logger.h
src/motor/: motor.cpp  motor.h
src/protocol/: protocol.cpp  protocol.h
src/safety/: safety.cpp  safety.h
src/uart/: uart.cpp  uart.h
test/: test_scenarios.py  uart_test.py
test/unit/: CMakeLists.txt  fsm_test_shim.c  test_door_fsm.c
test/unit/main/: CMakeLists.txt  test_door_fsm.c
